welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:4: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
		while (isFacingTrail && !estSurBiscuit) {
                       ^SlugSnail:9: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
		if (!isFacingTrail && !estFaceMur) {
                     ^SlugSnail:11: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
			if (!isFacingTrail && estFaceMur) {
                             ^SlugSnail:16: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
		if (!isFacingTrail && estFaceMur && !estSurBiscuit) {
                     ^SlugSnail:25: error: missing arguments for method isFacingTrail in class SlugSnail;
follow this method with `_' if you want to treat it as a partially applied function
	if (!isFacingTrail) {
             ^SlugSnail:36: error: type mismatch;
 found   : Boolean(false)
 required: java.awt.Color
		return false;
                       ^SlugSnail:39: error: type mismatch;
 found   : Boolean
 required: java.awt.Color
		if (getCouleurSol() == c:Color) {
                                    ^SlugSnail:39: error: type mismatch;
 found   : java.awt.Color
 required: Boolean
		if (getCouleurSol() == c:Color) {
                                        ^SlugSnail:41: error: type mismatch;
 found   : Boolean(true)
 required: java.awt.Color
			return true;
                               ^SlugSnail:44: error: type mismatch;
 found   : Boolean(false)
 required: java.awt.Color
		return false
                       ^