welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
 def hunt(c:Color) {
     while(!estSurBiscuit) {	
		while (isFacingTrail && !estSurBiscuit) {
			baisseBrosse()
			avance()
			leveBrosse()
		}
		if (!isFacingTrail && !estFaceMur) {
			droite()
			if (!isFacingTrail && estFaceMur) {
				gauche()
				gauche()
			}
		}
		if (!isFacingTrail && estFaceMur && !estSurBiscuit) {
			droite()
			if (estFaceMur) {
				gauche()
				gauche()
			}
		}
	}
	prendBiscuit()
	if (!isFacingTrail) {
		gauche()
	}

}



// méthode isFacingTrail
def isFacingTrail(c:Color):Color = {
	if (estFaceMur) {
		return false;
	} else {
		avance()
		if (getCouleurSol() == c:Color) {
			recule()
			return true;
		}
		recule()
		return false
	}
}